Init base structure

--- a/front/src/app/app.html
+++ b/front/src/app/app.html
@@ -1,5 +1,12 @@
 <main class="main">
   <h1>{{ title }}</h1>
+
+  <nav class="nav">
+    <a routerLink="/accidents-table">Table</a>
+    <a routerLink="/accidents-map">Map</a>
+  </nav>
+
+  <app-filter></app-filter>
 </main>
 
 
