Add base styles

--- a/front/src/app/pages/accidents-table/accidents-table.html
+++ b/front/src/app/pages/accidents-table/accidents-table.html
@@ -1,7 +1,6 @@
-<div class="accidents-container">
-  <div class="accidents-header">
-    <h2>Транспортні аварії</h2>
-  </div>
+<app-navigation></app-navigation>
+
+<section class="accidents-container">
 
   @if (loading) {
   <div class="loading">
@@ -38,4 +37,4 @@
     }
   </div>
   }
-</div>
+</section>
