--- a/front/src/app/pages/home/home.html
+++ b/front/src/app/pages/home/home.html
@@ -1,10 +1,3 @@
-<main class="main">
-  <h1>{{ title }}</h1>
+<app-navigation></app-navigation>
 
-  <nav class="nav">
-    <a routerLink="/accidents-table">Table</a>
-    <a routerLink="/accidents-map">Map</a>
-  </nav>
-
-  <app-filter></app-filter>
-</main>
+<h1>{{ title }}</h1>
