Add styles to map

--- a/front/src/app/components/navigation/navigation.html
+++ b/front/src/app/components/navigation/navigation.html
@@ -1,5 +1,5 @@
 <nav class="nav">
-  <a routerLink="/">Home</a>
-  <a routerLink="/accidents-table">Table</a>
-  <a routerLink="/accidents-map">Map</a>
+  <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+  <a routerLink="/accidents-table" routerLinkActive="active">Table</a>
+  <a routerLink="/accidents-map" routerLinkActive="active">Map</a>
 </nav>
