--- a/front/src/app/pages/accidents-table/accidents-table.html
+++ b/front/src/app/pages/accidents-table/accidents-table.html
@@ -34,7 +34,7 @@
       @for (accident of accidentPageElements; track accident.id) {
       <div class="table-row" [class]="'accident-' + accident.status">
         <div class="table-cell title-col">
-          <a routerLink="/accidents-table/{{ accident.id }}">{{ accident.title }}</a>
+          <a routerLink="/accidents/{{ accident.id }}">{{ accident.title }}</a>
         </div>
         <div class="table-cell type-col">
           <span class="accident-type">{{ accident.type }}</span>
