--- a/front/src/app/pages/accidents-table/accidents-table.html
+++ b/front/src/app/pages/accidents-table/accidents-table.html
@@ -4,25 +4,25 @@
 
 <section class="accidents-container">
 
-  @if (loading) {
+  @if (accidentsStore.loading()) {
   <div class="loading">
     <p>Завантаження даних...</p>
   </div>
   }
 
-  @if (error) {
+  @if (accidentsStore.error()) {
   <div class="error">
-    <p>{{ error }}</p>
+    <p>{{ accidentsStore.error() }}</p>
   </div>
   }
 
-  @if (!loading && !error && accidents.length === 0) {
+  @if (!accidentsStore.loading() && !accidentsStore.error() && accidentsStore.accidents().length === 0) {
   <div class="no-data">
     <p>Немає даних про аварії</p>
   </div>
   }
 
-  @if (!loading && !error && accidents.length > 0) {
+  @if (!accidentsStore.loading() && !accidentsStore.error() && accidentsStore.accidents().length > 0) {
   <div class="accidents-table">
     <div class="table-header">
       <div class="header-cell title-col">Назва</div>
