--- a/front/src/app/components/filter/filter.component.html
+++ b/front/src/app/components/filter/filter.component.html
@@ -10,9 +10,11 @@
       <mat-form-field class="full-width">
         <mat-label>Категорії транспорту</mat-label>
         <mat-select formControlName="categories" multiple>
-          <mat-option *ngFor="let category of categories" [value]="category.value">
+          @for (category of categoriesList; track $index) {
+          <mat-option [value]="category.value">
             {{ category.label }}
           </mat-option>
+          }
         </mat-select>
       </mat-form-field>
 
