--- a/front/src/app/pages/accidents-map/components/accident-popup/accident-popup.component.scss
+++ b/front/src/app/pages/accidents-map/components/accident-popup/accident-popup.component.scss
@@ -5,6 +5,12 @@
 
   & > p {
     margin: 0;
+
+    span {
+      text-transform: uppercase;
+      font-weight: 600;
+      margin-left: 3px;
+    }
   }
 }
 
