--- a/front/src/app/components/filter/filter.component.html
+++ b/front/src/app/components/filter/filter.component.html
@@ -1,7 +1,7 @@
 <mat-card class="filter-card">
   <mat-card-header>
     <mat-card-title>Фільтри</mat-card-title>
-    <button color="primary" (click)="onReset()">Скинути фільтри</button>
+    <button color="primary" (click)="onResetHandler()">Скинути фільтри</button>
   </mat-card-header>
 
   <mat-card-content>
