Add styles for loading and errors

--- a/front/src/app/pages/accident/accident.html
+++ b/front/src/app/pages/accident/accident.html
@@ -11,7 +11,7 @@
 
   @if (loading) {
   <div class="loading">
-    <div class="loading-spinner"></div>
+    <mat-spinner></mat-spinner>
     <p>Завантаження даних про аварію...</p>
   </div>
   }
