--- a/front/src/app/pages/accidents-map/components/accident-popup/accident-popup.component.html
+++ b/front/src/app/pages/accidents-map/components/accident-popup/accident-popup.component.html
@@ -1,5 +1,5 @@
 <div class="popup-container">
-  <a href="/accidents/{{id}}" class="popup-title">{{title}}</a>
+  <a routerLink="/accidents/{{id}}" class="popup-title">{{title}}</a>
   <p><strong>Категорія :</strong> <span>{{category}}</span></p>
   <p><strong>Важкість:</strong> {{severity}}</p>
   <p><strong>Координати:</strong> {{lat}}, {{lng}}</p>
