--- a/front/src/app/pages/accidents-table/accidents-table.scss
+++ b/front/src/app/pages/accidents-table/accidents-table.scss
@@ -1,32 +1,34 @@
-.accidents-container {
-  margin: 0 auto;
-}
+.table {
+  position: relative;
+  height: calc(100vh - 300px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-.loading,
-.error,
-.no-data {
-  text-align: center;
-  padding: 40px;
+  &.loading {
+    .map-container {
+      display: none;
+    }
 
-  p {
-    font-size: 18px;
-    margin-bottom: 15px;
+    .loading-container {
+      height: fit-content;
+      display: flex;
+      flex-direction: column;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+    }
   }
-}
 
-.error {
-  color: #dc3545;
+  &.error {
+    .map-container {
+      display: none;
+    }
 
-  button {
-    padding: 10px 20px;
-    background-color: #dc3545;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-
-    &:hover {
-      background-color: #c82333;
+    .error-container {
+      color: red;
+      font-size: 18px;
+      text-align: center;
     }
   }
 }
