Page states refactoring

--- a/front/src/app/pages/accidents-map/accidents-map.html
+++ b/front/src/app/pages/accidents-map/accidents-map.html
@@ -17,7 +17,7 @@
   }
 
   @if (!accidentsStore.loading() && !accidentsStore.error() && accidentsStore.accidents().length === 0) {
-  <div class="no-data">
+  <div class="no-data-container">
     <p>Немає даних про аварії</p>
   </div>
   }
